[package]
name = "graph"
version = "0.1.0"
authors = ["Huseyin Yilmaz <yilmazhuseyin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["serde_json"], branch="master" }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper", branch="master" }
# juniper = "0.14.2"
# juniper_hyper = "0.5.2"
hyper = "0.13.4"
tokio = { version = "0.2.13", features = ["full"] }
